--- a/src/main/resources/public/app/shared/footer.html
+++ b/src/main/resources/public/app/shared/footer.html
@@ -1,7 +1,7 @@
 
      <div class="text-center" id="footer">
-            <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
-           <p>Powered by Kopi-C lah</p>
+     <br/><br/><br/>
+          &copy; barscp 2015 |<a ui-sref="aboutSite"> about</a></p>
          </div>
 
 
