--- a/src/main/resources/public/app/shared/pagination/paginationDirectiveView.html
+++ b/src/main/resources/public/app/shared/pagination/paginationDirectiveView.html
@@ -1,19 +1,19 @@
  <div ng-if="pageCount > 1">
  <nav>
   <ul class="pagination">
-    <li>
-      <a href="#" aria-label="Previous">
+  
+    <li ng-if="pageNumber >1">
+      <a ui-sref="blog({type:blogType,category:category,page:getPrevPage()})" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
     <li ng-repeat="pageNum in getPageNumbers(pageCount)" ui-sref-active="active"><a ui-sref="blog({type:blogType,category:category,page:pageNum})">{{pageNum}}</a></li>
    
-    <li>
-      <a href="#" aria-label="Next">
+    <li ng-if="pageNumber < pageCount">
+      <a ui-sref="blog({type:blogType,category:category,page:getNextPage()})" aria-label="Next">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
   </ul>
 </nav>
 </div>
- 
