--- a/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
+++ b/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
@@ -2,11 +2,11 @@
 <div class="panel panel-default">
 <div class="panel-body">
 <div class="panel-title">
-		Recent Articles
+		recent articles
 	</div>
  
 	<div ng-repeat="article in articles">
-		<a ui-sref="article({id:article.articleId, name:getArticleName(article.title)})">{{article.title}}</a>
+		<a ui-sref="article({id:article.articleId})">{{article.title}}</a>
 	</div>
 </div>
 </div>
