--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
   <meta charset="utf-8">
-  <title>Barry Peralta Test haha</title>
+  <title>Welcome to barscp</title>
   <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
   <link rel="stylesheet" href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
   <!--  link rel="stylesheet" href="css/app.css"-->
@@ -18,28 +18,32 @@
   <script src="assets/libs/bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="assets/libs/bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="assets/libs/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="assets/libs/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   
   <script src="assets/libs/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="assets/libs/bower_components/angulike/angulike.js"></script>
 
 
   <script src="app/app.module.js"></script>
   <script src="app/app.router.js"></script>
   
-  <script src="app/components/login/AuthorService.js"></script>
+  <script src="app/components/author/AuthorService.js"></script>
+  <script src="app/components/login/loginService.js"></script>
 
   <script src="app/components/login/loginController.js"></script>
   <script src="app/components/blog/blogService.js"></script>
    <script src="app/components/article/articleService.js"></script>
    <script src="app/components/article/articleController.js"></script>
-   
+   <script src="app/shared/search/searchController.js"></script>
   
   <script src="app/shared/articleThumbnail/articleThumbnailDirective.js"></script>
   <script src="app/shared/categories/categoriesDirective.js"></script>
   <script src="app/shared/categories/categoriesService.js"></script>
   <script src="app/shared/pagination/paginationDirective.js"></script>
-
-  <script src="app/shared/recent/recentArticleDirective.js"></script>
-  
+ <script src="app/shared/recent/recentArticleDirective.js"></script>
+ <script src="app/shared/disqusComment/disqusCommentDirective.js"></script>
+ <script src="app/shared/disqusComment/dirDisqus.js"></script>
+     
     <!--  script src="app/shared/navigation/navigationDirective.js"></script-->
   
   <!--script src="js/app.js"></script>
@@ -52,7 +56,7 @@
   	.backlah {
   		background-color:#777;
   	}
-  	.whitelah {
+  	.white_background {
   		background-color:#fff;
   	}
   	.ng-enter {
@@ -70,10 +74,11 @@
   </style>
 </head>
 <body  ng-cloak class="ng-cloak backlah">
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-1 col-sm-1 hidden-xs "></div>
-		<div class="container col-md-10 col-sm-10 col-xs-12 whitelah">
+		<div class="container col-md-10 col-sm-10 col-xs-12 white_background">
 			
 			<header ng-include="'app/shared/header.html'"></header>
 		   	
@@ -87,6 +92,8 @@
 		<div class="col-md-1 col-sm-1 hidden-xs "></div>
 	</div>
 </div>	
+
+
 </body>
 
 </html>
