--- a/src/main/resources/public/app/shared/sidebar/sideNavView.html
+++ b/src/main/resources/public/app/shared/sidebar/sideNavView.html
@@ -1,5 +1,6 @@
 
-<div class="panel panel-default"   ng-if="loginUser.isAdmin=='true'">
+<div ng-controller="SideNavController">
+<div class="panel panel-default"   ng-if="user">
 
 <div class="panel-body" align="center"> 
 <a ui-sref="article({id: 'new',name:null})"> 
@@ -7,7 +8,10 @@
 </div>
 </div>
 
+
 <div my-category-tags blog-type="{{blogType}}"></div>
 
 <div recent-articles></div>
+
+</div>
 
