--- a/src/main/resources/public/app/shared/static_pages/homeView.html
+++ b/src/main/resources/public/app/shared/static_pages/homeView.html
@@ -1,5 +1,5 @@
 		<div class="jumbotron">
-		 <h2>Welcome!</h2>
-		  <p> blah blah blah la la la</p>
+		 <h2>Simplicity is the soul of efficiency.</h2>
+		  <p> --Austin Freeman</p>
 		</div>
 	
