--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en" ng-app="app">
 <head>
+  <!-- base is for removing hashbang, study further.
+  <base href="/">  -->
   <meta charset="utf-8">
-  <title>Welcome to barscp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta property="og:title"content="Developers and Programmers" />
+  <meta property="og:site_name" content="barscp website"/>
+  <meta property="og:url" content="http://barscp-test.elasticbeanstalk.com/index.html#/"/>
+  <meta property="og:description" content="Some introduction about this site" />
+  <meta property="og:image" content="http://i.imgur.com/haxIRew.jpg" />
   <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
   <link rel="stylesheet" href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <!--  link rel="stylesheet" href="css/app.css"-->
-  <!-- link rel="stylesheet" href="css/animations.css"-->
   <script src="assets/libs/bower_components/jquery/dist/jquery.min.js"></script>
 
  <script src="assets/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -28,13 +33,21 @@
   <script src="app/app.router.js"></script>
   
   <script src="app/components/author/AuthorService.js"></script>
+  <script src="app/components/author/authorController.js"></script>
+  
+  <script src="app/components/author/authorEditController.js"></script>
   <script src="app/components/login/loginService.js"></script>
+  <script src="app/components/login/userService.js"></script>
 
   <script src="app/components/login/loginController.js"></script>
   <script src="app/components/blog/blogService.js"></script>
+  <script src="app/components/blog/blogListController.js"></script>
+  
    <script src="app/components/article/articleService.js"></script>
    <script src="app/components/article/articleController.js"></script>
-   <script src="app/shared/search/searchController.js"></script>
+   
+   <script src="app/components/article/articleEditController.js"></script>
+  <script src="app/shared/header/headerController.js"></script>
   
   <script src="app/shared/articleThumbnail/articleThumbnailDirective.js"></script>
   <script src="app/shared/categories/categoriesDirective.js"></script>
@@ -44,6 +57,7 @@
  <script src="app/shared/disqusComment/disqusCommentDirective.js"></script>
  <script src="app/shared/disqusComment/dirDisqus.js"></script>
      
+  <script src="app/shared/sidebar/sideNavController.js"></script>
     <!--  script src="app/shared/navigation/navigationDirective.js"></script-->
   
   <!--script src="js/app.js"></script>
@@ -75,12 +89,12 @@
 </head>
 <body  ng-cloak class="ng-cloak backlah">
 
-<div class="container">
+<div class="container" >
 	<div class="row">
 		<div class="col-md-1 col-sm-1 hidden-xs "></div>
 		<div class="container col-md-10 col-sm-10 col-xs-12 white_background">
 			
-			<header ng-include="'app/shared/header.html'"></header>
+			<header ng-include="'app/shared/header/header.html'"></header>
 		   	
 		   	<div class="row">
 				<div ui-view class="col-md-8 col-sm-7 col-xs-12"></div>
