--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,8 +10,11 @@
   <meta property="og:url" content="http://barscp-test.elasticbeanstalk.com/index.html#/"/>
   <meta property="og:description" content="Some introduction about this site" />
   <meta property="og:image" content="http://i.imgur.com/haxIRew.jpg" />
-  <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
+  <meta property="og:type" content="article" />
+  <!--  link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico"-->
+  
   <link rel="stylesheet" href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
+ <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="assets/libs/bower_components/jquery/dist/jquery.min.js"></script>
 
  <script src="assets/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -56,7 +59,7 @@
  <script src="app/shared/recent/recentArticleDirective.js"></script>
  <script src="app/shared/disqusComment/disqusCommentDirective.js"></script>
  <script src="app/shared/disqusComment/dirDisqus.js"></script>
-     
+   <script src="app/shared/loader/myLoadingDisplay.js"></script>
   <script src="app/shared/sidebar/sideNavController.js"></script>
     <!--  script src="app/shared/navigation/navigationDirective.js"></script-->
   
@@ -88,14 +91,17 @@
   </style>
 </head>
 <body  ng-cloak class="ng-cloak backlah">
-
+	
 <div class="container" >
+
 	<div class="row">
 		<div class="col-md-1 col-sm-1 hidden-xs "></div>
 		<div class="container col-md-10 col-sm-10 col-xs-12 white_background">
 			
 			<header ng-include="'app/shared/header/header.html'"></header>
-		   	
+		   	<div class="alert alert-danger" ng-if="errorMessage" >
+					{{errorMessage}}
+				</div>
 		   	<div class="row">
 				<div ui-view class="col-md-8 col-sm-7 col-xs-12"></div>
 				<div class="col-md-4 col-sm-5 col-xs-12"  ng-include="'app/shared/sidebar/sideNavView.html'"></div>
