--- a/src/main/resources/public/app/shared/footer.html
+++ b/src/main/resources/public/app/shared/footer.html
@@ -1,7 +1,7 @@
 
      <div class="text-center" id="footer">
      <br/><br/><br/>
-          &copy; barscp 2015 |<a ui-sref="aboutSite"> about</a></p>
+          &copy; barscp 2015 | <a href="http://photography.barscp.com">photography</a> | <a href="http://devnotes.barscp.com">programming</a> |<a ui-sref="aboutSite"> about</a></p>
          </div>
 
 
