--- a/src/main/resources/public/app/shared/sidebar/sideNavView.html
+++ b/src/main/resources/public/app/shared/sidebar/sideNavView.html
@@ -3,7 +3,7 @@
 <div class="panel panel-default"   ng-if="user">
 
 <div class="panel-body" align="center"> 
-<a ui-sref="article({id: 'new',name:null})"> 
+<a ui-sref="article({id: 'new',title:null})"> 
 		Add New Article</a>
 </div>
 </div>
