--- a/src/main/resources/public/app/shared/articleThumbnail/articleThumbnailView.html
+++ b/src/main/resources/public/app/shared/articleThumbnail/articleThumbnailView.html
@@ -13,17 +13,17 @@
 			<div
 				ng-class="{'col-md-6 col-sm-12 col-xs-12 reduce-gutter': imageUrl,'col-md-12 col-sm-12 col-xs-12': !imageUrl }">
 				<div>
-					<a ui-sref="article({id: articleId})">
+					<a ui-sref="article({id: articleId, title:removeSpace(title)})">
 						<h2 class="panel-title">{{title}}</h2>
 					</a>
 				</div>
 				<div>
 					<p>
 						<small> <a
-							ui-sref="blog({type:type,category:all,page:null})">{{type}}</a> |
+							ui-sref="blog({type:type,category:'all',page:null})">{{type}}</a> |
 							<a ui-sref="blog({type:type,category:category,page:null})">{{category}}</a>
 
-							<br />posted by <a ui-sref="author({authorId:authorId})">{{authorName}}</a>
+							<br />posted by <a ui-sref="author({authorId:authorId,name:removeSpace(authorName)})">{{authorName}}</a>
 							on {{date|date:'MMM dd, yyyy'}}
 						</small>
 
