--- a/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
+++ b/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
@@ -1,12 +1,12 @@
 
 <div class="panel panel-default">
 	<div class="panel-body">
-		<div class="panel-title">recent articles</div>
+		<div class="panel-title">recent articles on {{host}}</div>
 
 <ul>
 		<li ng-repeat="article in articles">
 			 <a
-				ui-sref="article({id:article.articleId})">{{article.title}}
+				ui-sref="article({id:article.articleId, title: removeSpace(article.title)})">{{article.title}}
               <small>   - {{article.type}}- {{article.dateCreated|date:'MMM dd, yyyy'}}</small></a>
 		
 		</li>
