--- a/src/main/resources/public/app/shared/static_pages/aboutThisSite.html
+++ b/src/main/resources/public/app/shared/static_pages/aboutThisSite.html
@@ -1,8 +1,9 @@
 		<div class="jumbotron">
 		 <h2>about this site</h2>
-		  
+		  	
+			<h3>To Developers:</h3>
 			<p>
-		   This website is developed using <a href="https://angularjs.org/">AngularJs 1.4</a>, <a href="https://spring.io/guides/gs/rest-service/">Spring Rest</a>, <a href="http://projects.spring.io/spring-security/">Spring Security</a>, <a href="http://getbootstrap.com/"> Bootstrap CSS</a>, <a href="http://www.tutorialspoint.com/hibernate/">Hibernate</a>, <a href="http://www.oracle.com/technetwork/database/mysql/index.html">MYSQL</a>.
+		   This website is implemented using <a href="https://angularjs.org/">AngularJs 1.4</a>, <a href="https://spring.io/guides/gs/rest-service/">Spring Rest</a>, <a href="http://projects.spring.io/spring-security/">Spring Security</a>, <a href="http://getbootstrap.com/"> Bootstrap CSS</a>, <a href="http://www.tutorialspoint.com/hibernate/">Hibernate</a>, <a href="http://www.oracle.com/technetwork/database/mysql/index.html">MYSQL</a>.
 		  Feel free to download the codes from my  <a href="https://github.com/bperalta84/blogger-springrest">Github</a>.
 		  If you have comments, suggestions, or if you want to write some articles for this site, send me an email at bars_cp@yahoo.com or barryperalta@gmail.com.
 		  </p>
