--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,15 +3,11 @@
 <head>
   <!-- base is for removing hashbang, study further.
   <base href="/">  -->
+ <meta name="google-site-verification" content="GYCTlvgtOvH-dUqlUTNWyI6oAcNxF1b5GmcJ9-xd-Hc" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <meta property="og:title"content="Developers and Programmers" />
-  <meta property="og:site_name" content="barscp website"/>
-  <meta property="og:url" content="http://barscp-test.elasticbeanstalk.com/index.html#/"/>
-  <meta property="og:description" content="Some introduction about this site" />
-  <meta property="og:image" content="http://i.imgur.com/haxIRew.jpg" />
-  <meta property="og:type" content="article" />
-  <!--  link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico"-->
+ 
+  <link rel="shortcut icon" href="assets/img/bp.png">
   
   <link rel="stylesheet" href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
