added publish/unpublish feature

--- a/src/main/resources/public/app/shared/header/header.html
+++ b/src/main/resources/public/app/shared/header/header.html
@@ -1,19 +1,5 @@
 
 <div ng-controller="HeaderController">
-	<!-- div align="right" >
-		
-		<span  ng-if="loginUser">
-		Welcome back <a ui-sref="author({authorId:user.authorId})">{{user.name}}</a>!&nbsp;&nbsp;
-		<a href="#" ng-click="logout()">
-		Sign out </a>
-		 <i ng-if="signoutLoading==true" class="fa fa-refresh fa-spin"></i>
-		 	
-	  </span>
-	  < span ng-if = "!loginUser">
-		<a href="#" ui-sref="login">
-		Sign in</i></a></span>
-	</div--> 
-
 <nav class="navbar navbar-default">
   <div>
     <div class="navbar-header">
@@ -26,8 +12,8 @@
        <a class="navbar-brand" ui-sref="home">
   <!--    <i class="fa fa-file-code-o"></i> DevNotes -->
   <div>
-  <img src="../../../assets/img/bp.png" width="25" height="25" />
-        Photography</div>
+  <img src="../../../assets/img/bp1.png" width="25" height="25" />
+        Developer Notes</div>
         </a>
     </div>
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
