--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,8 +7,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
  
-  <link rel="shortcut icon" href="assets/img/bp.png">
-  
+  <link rel="shortcut icon" href="assets/img/bp1.png">
+  <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+  <script src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js"></script>
+   <link rel="stylesheet" href="assets/css/sons-of-obsidian.css">
+ 
   <link rel="stylesheet" href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script src="assets/libs/bower_components/jquery/dist/jquery.min.js"></script>
@@ -58,12 +61,6 @@
   <script src="app/shared/sidebar/sideNavController.js"></script>
     <!--  script src="app/shared/navigation/navigationDirective.js"></script-->
   
-  <!--script src="js/app.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/directives.js"></script-->
   <style>
   	.backlah {
   		background-color:#777;
@@ -84,11 +81,15 @@
   	.reduce-gutter > [class*='col-'] {
     padding-right:5px;
     padding-left:5px;
+    
    }
  
-   
-  }
- 
+   pre { padding: 2px; 
+   		 border: 1px solid #888;
+  		 overflow-x:scroll;
+  		 white-space: nowrap;
+  		 background-color:#000000;
+    }
  
   </style>
 </head>
