--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -41,7 +41,13 @@
   <script src="app/components/author/authorEditController.js"></script>
   <script src="app/components/login/loginService.js"></script>
   <script src="app/components/login/userService.js"></script>
+  <script src="app/components/reset-password/resetPasswordController.js"></script>
+<script src="app/components/reset-password/resetPasswordService.js"></script>
+  <script src="app/components/change-password/changePasswordController.js"></script>
+<script src="app/components/change-password/changePasswordService.js"></script>
 
+  <script src="app/components/create-author/createAuthorController.js"></script>
+<script src="app/components/create-author/createAuthorService.js"></script>
   <script src="app/components/login/loginController.js"></script>
   <script src="app/components/blog/blogService.js"></script>
   <script src="app/components/blog/blogListController.js"></script>
