--- a/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
+++ b/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
@@ -1,7 +1,7 @@
 
 <div class="panel panel-default">
 	<div class="panel-body">
-		<div class="panel-title"><small>recent articles on {{host}}</small></div>
+		recent articles on {{host}}
 
 <ul>
 		<li ng-repeat="article in articles track by article.articleId">
