--- a/src/main/resources/public/app/shared/static_pages/homeView.html
+++ b/src/main/resources/public/app/shared/static_pages/homeView.html
@@ -1,6 +1,6 @@
 
 
 		<div ng-repeat="item in menu track by item.id" ui-sref-active="active">
-			<div my-category-tags blog-type="{{item.value}}"></div>
+			<div my-category-tags blog-type="{{item.key}}"></div>
 		</div>
 	
