updated code to add file uploader

--- a/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
+++ b/src/main/resources/public/app/shared/recent/recentArticleDirectiveView.html
@@ -1,13 +1,17 @@
 
 <div class="panel panel-default">
+
 	<div class="panel-body">
-		recent articles on {{host}}
+	<small>	recent articles on {{host}}</small>
 
 <ul>
 		<li ng-repeat="article in articles track by article.articleId">
 			 <a
-				ui-sref="article({id:article.articleId, title: removeSpace(article.title)})">{{article.title}}
-              <small>   - {{article.type}}- {{article.dateCreated|date:'MMM dd, yyyy'}}</small></a>
+				ui-sref="article({id:article.articleId, title: removeSpace(article.title)})">
+				<small>{{article.title}}</small>
+              <!-- <small>   - {{article.type}}- {{article.dateCreated|date:'MMM dd, yyyy'}}</small> -->
+              </a>
+              
 		
 		</li>
 </ul>
