--- a/src/main/resources/public/app/shared/static_pages/aboutThisSite.html
+++ b/src/main/resources/public/app/shared/static_pages/aboutThisSite.html
@@ -1,12 +1,12 @@
 
 <div class="jumbotron">
 	<h2>About</h2>
-	This website contains notes on web application development using Java, Javascript and other programming tools and concepts.  
+	<!--     
 	<h3>Disclaimer:</h3>
 	Articles written in this website are the personal views of its
 		author and does not represent the views of the company they are working for. Photos posted here are copyrighted
 		to their respective owners.
-	<h3>To Developers:</h3>
+	<h3>To Developers:</h3> -->
 	This website is implemented using the following:
 	<h4>Client Side</h4>
 	<ul>
@@ -15,10 +15,11 @@
 		<li><a target="_blank" href="http://getbootstrap.com/">
 				Bootstrap CSS</a></li>
 		<li><a target="_blank"
-			href="http://fortawesome.github.io/Font-Awesome/"> Font Awesome</a></li>
+			href="http://fortawesome.github.io/Font-Awesome/"> Font Awesome</a></li> 
+		<!-- 
 		<li><a target="_blank"
 			href="https://code.google.com/p/google-code-prettify/">Google
-				Code Prettify </a></li>
+				Code Prettify </a></li>-->
 	</ul>
 	<h4>Server Side</h4>
 	<ul>
@@ -42,5 +43,5 @@
 		
   <br/>
   <br/>
-	This website is developed and maintained by <a target="_blank" href="https://bperalta84.github.io/">Barry Peralta</a>
+	<!--  This website is developed and maintained by <a target="_blank" href="https://bperalta84.github.io/">Barry Peralta</a>-->
 </div>
