updated upload file
upload file

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -28,8 +28,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">  
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="shortcut icon" href="assets/img/bp1.png">
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
-<script src="https://google-code-prettify.googlecode.com/svn/loader/prettify.js"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/prettify.js"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link rel="stylesheet"	href="assets/libs/bower_components/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/css/sons-of-obsidian.css">
 <link rel="stylesheet" href="assets/css/clean-blog.css">
@@ -59,7 +59,7 @@
 <script src="app/components/login/loginService.js"></script>
 <script src="app/components/login/userService.js"></script>
 <script src="app/components/reset-password/resetPasswordController.js"></script>
-<script src="app/components/reset-password/resetPasswordService.js"></script>
+<script src="app/components/reset-password/ResetPasswordService.js"></script>
 <script src="app/components/change-password/changePasswordController.js"></script>
 <script src="app/components/change-password/changePasswordService.js"></script>
 <script src="app/components/create-author/createAuthorController.js"></script>
