Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Angularjs-springrest by barscp</title>
+    <title>AngularJS-Spring by barscp</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Angularjs-springrest</h1>
-        <p>Web application that uses AngularJS 1.5, Bootstrap CSS, Spring Rest, Hibernate, and Spring Bootstrap.</p>
+        <h1>AngularJS-Spring</h1>
+        <p>Web application that uses AngularJS 1.4, Bootstrap CSS, Spring Rest, Hibernate, and Spring Bootstrap.</p>
 
         <p class="view"><a href="https://github.com/barscp/angularjs-springrest">View the Project on GitHub <small>barscp/angularjs-springrest</small></a></p>
 
@@ -28,14 +28,12 @@
         </ul>
       </header>
       <section>
-        <p>blogger-springrest is a simple blogging type web application. </p>
-
-<p>This website is implemented using the following:</p>
+        <p>This website is implemented using the following:</p>
 
 <h2>
 <a id="client-side" class="anchor" href="#client-side" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Client Side:</h2>
 
-<pre><code>    AngularJs 1.4
+<pre><code>    AngularJS 1.4
     Bootstrap CSS
     Font Awesome
     Google Code Prettify
@@ -44,7 +42,8 @@
 <h2>
 <a id="server-side" class="anchor" href="#server-side" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Server Side:</h2>
 
-<pre><code>    Spring Rest
+<pre><code>    Spring Bootstrap
+    Spring Rest
     Spring Security
     Hibernate
     MYSQL
